<resources>
    <string name="app_name">BouBouk</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">391162168131429</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb391162168131429</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="title_activity_main">BouBouk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="books">My Library</string>
    <string name="sign_out">Sign out</string>
    <string name="warning">Warning!</string>
    <string name="check_connection">Please check your connection and retry.</string>
    <string name="ok">OK</string>
    <string name="google_signin_failed">Google sign in failed</string>
    <string name="back">Back</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="search_a_book_in_your_library">Search in your library…</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="keyword">Keyword (Title, Author, …)</string>
    <string name="isbn">ISBN</string>
    <string name="add_book">Add book</string>
    <string name="search">Search</string>
    <string name="cancel">Back</string>
    <string name="no_books_found">No books found</string>
    <string name="sort_books_by">Sort your library by</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="error_in_the_request">Error in the request</string>
    <string name="error_in_the_response">Error in the response</string>
    <string name="search_again">Search again</string>
    <string name="book_added">Book added successfully in your library</string>
    <string name="signing_in">Signing in…</string>
    <string name="want_to_exit">Do you want to close the app?</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="buy_ebook">Buy eBook</string>
    <string name="select_all">Select all</string>
    <string name="search_results_for">Search results for</string>
    <string name="no_books_in_library">There are no books in your library.\nTap \"+\" to add one</string>
    <string name="sort_by_author">Sort by author</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="title_activity_search_online">Search books online</string>
    <string name="search_by_keyword_title_author_isbn">Search by title, author, ISBN…</string>
    <string name="in_your_library">In your library</string>
    <string name="ebook_not_available">Ebook not available</string>
    <string name="offline">Offline</string>
    <string name="no_connection">No connection available</string>
    <string name="clear_text">Clear text icon</string>
    <string name="search_icon">Search icon</string>
    <string name="book_cover">Book cover</string>
    <string name="clear_text_vocal_search_icon">Clear text / Vocal search icon</string>
    <string name="check_icon">Check icon</string>
    <string name="add_icon">Add icon</string>
    <string name="books_removed">Book(s) removed successfully from your library</string>
    <!--<string name="default_web_client_id">294DetailActivity357876886-t4jn9l75re69muknv0bv7t6hjvhdtjai.apps.googleusercontent.com</string>-->
</resources>