<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_by_alpha_black_24dp"
        android:orderInCategory="1"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/select_all"
        android:visible="true"
        android:icon="@drawable/ic_done_all_black_24dp"
        android:orderInCategory="0"
        android:title="@string/select_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:visible="false"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="2"
        android:title="@string/delete"
        app:showAsAction="always" />

</menu>
