<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    android:padding="4dp">

    <ImageView
        android:id="@+id/result_cover"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/book_cover"
        android:src="@drawable/cover_not_available" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result_title"
            style="@style/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/result_author"
            style="@style/textAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/already_added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_your_library"
            android:textSize="14sp"
            android:textStyle="italic"
            android:visibility="gone" />
    </LinearLayout>

    <ImageView
        android:id="@+id/result_add"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:contentDescription="@string/add_icon"
        android:focusable="true"
        android:src="@drawable/ic_add_black_24dp"
        android:tint="@color/colorAccent" />

</LinearLayout>
