<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.uniroma1.boubouk.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@android:color/black" />

        <RelativeLayout
            android:id="@+id/search_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:id="@+id/search_bar_layout_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"

                android:background="@drawable/background_search_white"
                android:focusableInTouchMode="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:contentDescription="@string/search_icon"
                    android:id="@+id/search_icon"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/ic_search_black_24dp"
                    android:tint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/search_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/search_a_book_in_your_library"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textColorHint="@android:color/darker_gray"
                    tools:ignore="Autofill" />

                <ImageView
                    android:id="@+id/cross"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/clear_text"
                    android:onClick="clearSearchText"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/ic_clear_black_24dp"
                    android:tint="@android:color/darker_gray"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/select_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:textStyle="italic"
                android:visibility="gone" />
        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onActionAdd"
        android:src="@drawable/ic_add_black_24dp"
        android:tint="@color/colorWhite" />

    <include
        android:id="@+id/include_main"
        layout="@layout/content_main" />

</android.support.design.widget.CoordinatorLayout>
